--- a/WpfTasksListMVVM/Dictionaries/Colours.xaml
+++ b/WpfTasksListMVVM/Dictionaries/Colours.xaml
@@ -1,4 +1,24 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <!--App Colours-->
+    <SolidColorBrush x:Key="AccentDark" Color="#FF164863" />
+    <SolidColorBrush x:Key="TaskListBackground" Color="#FFECECEC" />
+    <SolidColorBrush x:Key="WindowBackground" Color="#FFFFFFFF" />
+    <SolidColorBrush x:Key="TaskStatusBackground" Color="#FFF6F6F6" />
+    <SolidColorBrush x:Key="DefaultText" Color="#FF474747" />
     
+    <!--Task Importance Colours-->
+    <SolidColorBrush x:Key="Importance-Low" Color="#FF0CAFF4" />
+    <SolidColorBrush x:Key="Importance-Med" Color="#FF2AD985" />
+    <SolidColorBrush x:Key="Importance-High" Color="#FFF4B30C" />
+    <SolidColorBrush x:Key="Importance-Crit" Color="#FFCA2C2C" />
+
+    <!--Task Progress Colours-->
+    <SolidColorBrush x:Key="Progress-InProgress" Color="#FF518657" />
+    <SolidColorBrush x:Key="Progress-Completed" Color="#FF4187AC" />
+    <SolidColorBrush x:Key="Progress-NotStarted" Color="#FFB1B1B1" />
+    <SolidColorBrush x:Key="Progress-Late" Color="#FFB46161" />
+    <SolidColorBrush x:Key="Progress-Archieved" Color="#FFC8A36C" />
+    <SolidColorBrush x:Key="Progress-Deleted" Color="#FF606060" />
+
 </ResourceDictionary>
