--- a/WpfTasksListMVVM/Views/MainWindow.xaml
+++ b/WpfTasksListMVVM/Views/MainWindow.xaml
@@ -172,12 +172,20 @@
 
             <!--Task View Buttons-->
             <Grid Grid.Row="2">
-                <Button HorizontalAlignment="Left"
+                <Button Style="{StaticResource TaskViewDeleteButton}"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        Content="Delete"
+                        Margin=" 20 0 0 0"/>
+                <Button Style="{StaticResource TaskViewEditButton}"
+                        Content="Edit" 
+                        HorizontalAlignment="Center"
                         VerticalAlignment="Center"/>
-                <Button HorizontalAlignment="Center"
-                        VerticalAlignment="Center"/>
-                <Button HorizontalAlignment="Right"
-                        VerticalAlignment="Center"/>
+                <Button Style="{StaticResource TaskViewCompleteButton}"
+                        HorizontalAlignment="Right"
+                        VerticalAlignment="Center"
+                        Content="Complete"
+                        Margin="0 0 20 0"/>
             </Grid>
         </Grid>
         
