--- a/WpfTasksListMVVM/Dictionaries/Styles.xaml
+++ b/WpfTasksListMVVM/Dictionaries/Styles.xaml
@@ -190,4 +190,53 @@
             </Setter.Value>
         </Setter>
     </Style>
+    
+    <!--New Task Window Title-->
+    <Style x:Key="NewTaskTitle" TargetType="TextBox">
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Foreground" Value="{StaticResource DefaultText}" />
+        <Setter Property="FontSize" Value="18" />
+    </Style>
+
+    <!--New Task Window Description-->
+    <Style x:Key="NewTaskDescription" TargetType="TextBox">
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Foreground" Value="{StaticResource DefaultText}" />
+        <Setter Property="FontSize" Value="18" />
+    </Style>
+
+    <!--New Task Window CheckList-->
+    <Style x:Key="NewTaskCheckList" TargetType="TextBox">
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Foreground" Value="{StaticResource DefaultText}" />
+        <Setter Property="FontSize" Value="18" />
+    </Style>
+    
+    <!--New Task CheckList Button-->
+    <Style x:Key="NewTaskCheckListButton" TargetType="Button">
+        <Setter Property="Margin" Value="0 0 0 0" />
+        <Setter Property="Height" Value="40" />
+        <Setter Property="Width" Value="40" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}" CornerRadius="3">
+                        <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalAlignment}" VerticalAlignment="{TemplateBinding VerticalAlignment}" />
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="{StaticResource NewTaskChecklistButton.Over}" />
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter Property="Background" Value="{StaticResource NewTaskChecklistButton.Click}" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
+
+
+
 </ResourceDictionary>
