Finished TaskDataService and TaskViewModel

--- a/WpfTasksListMVVM/Views/MainWindow.xaml
+++ b/WpfTasksListMVVM/Views/MainWindow.xaml
@@ -91,10 +91,16 @@
                     Width="40"
                     Margin="0 0 20 0"
                     Command="{Binding IOpenNewWindow}">
+                <Button.DataContext>
+                    <vm:MainWindowViewModel />
+                </Button.DataContext>
                 <!--Icon-->
                 <Viewbox Width="25"
                          Height="25" >
-                    <Path Data="{StaticResource NewTaskIcon}" Fill="{StaticResource OnAccent}" Height="27" Stretch="Fill" Width="28"/>
+                    <Path Data="{StaticResource NewTaskIcon}" 
+                          Fill="{StaticResource OnAccent}" 
+                          Height="27" Stretch="Fill" 
+                          Width="28"/>
                 </Viewbox>
             </Button> 
             
